# routes/index.js
@@ -6,7 +6,8 @@ router.get('/', (req, res) => {
   res.send('Welcome to the Online Store API! Access documentation via /api-docs');
 });
 
-// Route everything starting with /products to our products routing file
+// Primary collection routing maps
 router.use('/products', require('./products'));
+router.use('/orders', require('./orders')); // Added second required collection
 
 module.exports = router;
